# polars-expedition

./: .gitignore  LICENSE_MIT  README.md
polars-py-extension/: Cargo.toml  pyproject.toml  run.py
polars-py-extension/.devcontainer/: devcontainer.json
polars-py-extension/src/: lib.rs
polars-wasm/: Cargo.toml  LICENSE_MIT  README.md
polars-wasm/.devcontainer/: devcontainer.json
polars-wasm/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
polars-wasm/frontend/src/: main.ts
polars-wasm/src/: lib.rs
